<resources>
    <string name="app_name">Fosterize</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meet_new">Meet new</string>
    <string name="doggos">doggos,</string>
    <string name="forever_home">forever home</string>
    <string name="find_them">Find them</string>
    <string name="or_help_us">Or help us</string>
    <string name="finding_them">finding them</string>
    <string name="community">community</string>
    <string name="join_to_our">Join to our</string>
    <string name="app_desc">Are you looking for a new dog? Or do you fostering one? Let us make things smooth and fun!</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">I do already have an account. <u>Login</u></string>
    <string name="no_account">I do not have an account yet. <u>Sign up</u></string>
    <string name="login">Login</string>
    <string name="join_fosterize">JOIN FOSTERIZE</string>
    <string name="app_name">Fosterize</string>
</resources>